# hatrack

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  e2e.yml  push.yaml
benches/: proxy_handler.rs  replica_selector.rs
src/: http.rs  lib.rs  main.rs  main_test.rs  metrics.rs  replica_selector.rs  replica_selector_test.rs
src/util/: mod.rs  parse.rs  shutdown.rs  upstream_target.rs
tests/: e2e.rs
