[package]
name = "hatrack"
version = "0.1.0"
edition = "2024"
description = "A general purpose HA tracking proxy, that will drop requests from all HA ordinals apart from the active one."

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
hyper = "1.10.1"
hyper-util = { version = "0.1.20", features = ["full"] }
kubert-prometheus-process = "0.2.3"
prometheus-client = "0.23.1"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-logfmt = "0.3.7"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
xxhash-rust = { version = "0.8.16", features = ["xxh3"] }
futures-util = "0.3.32"
http-body-util = "0.1.3"

[profile.release]
lto = true
codegen-units = 1
