[package]
name = "hatrack"
version = "0.1.0"
edition = "2024"
description = "A general purpose HA tracking proxy, that will drop requests from all HA ordinals apart from the active one."

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
dashmap = "6.1.0"
hyper = "1.10.1"
hyper-util = { version = "0.1.20", features = ["full"] }
kubert-prometheus-process = "0.2.3"
prometheus-client = "0.23.1"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-logfmt = "0.3.7"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
xxhash-rust = { version = "0.8.16", features = ["xxh3"] }
futures-util = "0.3.32"
http-body-util = "0.1.3"
itoa = "1.0"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.14", features = [
    "flamegraph",
    "criterion",
    "prost-codec",
] }
testcontainers = { version = "0.23", features = ["http_wait"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "replica_selector"
harness = false

[[bench]]
name = "proxy_handler"
harness = false

[profile.release]
lto = true
codegen-units = 1
debug = true

# Docker-friendly release profile with less aggressive optimizations
# to avoid OOM during builds in memory-constrained environments
[profile.release-docker]
inherits = "release"
lto = "thin"  # Use thin LTO instead of full LTO - much less memory
codegen-units = 16  # More parallelism, less memory per unit

[profile.bench]
inherits = "release"
debug = true
